--- a/projekty.html
+++ b/projekty.html
@@ -128,7 +128,7 @@
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="fullscreen-slider.html">Luxusní apartmán</a></h4>
+                                                    <h4 class="project-grid-item-title"><a href="interiery_01.html">Luxusní apartmán</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Praha 1 </div>
 
@@ -140,14 +140,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="european-lard-station.html">
+                                                <a class="project-grid-item-img-link" href="interiery_02.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/interiors/thumbnails/2. lodes.jpg" data-lazy-src="images/interiors/thumbnails/2. lodes.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="european-lard-station image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="european-lard-station.html">European
+                                                    <h4 class="project-grid-item-title"><a href="interiery_02.html">European
                                                             Lard Station</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Strasbourg, France </div>
@@ -160,14 +160,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="cultural-complex-centre.html">
+                                                <a class="project-grid-item-img-link" href="interiery_03.html">
                                                     <div class="project-grid-item-img">
                                                         <img   src="images/interiors/thumbnails/3. svetelne vlakno.JPG" data-lazy-src="images/interiors/thumbnails/3. svetelne vlakno.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="cultural-complex-centre" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="cultural-complex-centre.html">Cultural
+                                                    <h4 class="project-grid-item-title"><a href="interiery_03.html">Cultural
                                                             Complex Centre</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Muscat, Sultanate of Oman </div>
@@ -180,14 +180,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="alvar-alto-museum.html">
+                                                <a class="project-grid-item-img-link" href="interiery_04.html">
                                                     <div class="project-grid-item-img">
                                                         <img   src="images/interiors/thumbnails/4. dark.jpg" data-lazy-src="images/interiors/thumbnails/4. dark.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="alvar-alto-museum image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="alvar-alto-museum.html">Alvar
+                                                    <h4 class="project-grid-item-title"><a href="interiery_04.html">Alvar
                                                             Alto Museum</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Casablanca, Morocco </div>
@@ -200,14 +200,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="dance-and-music-theatre.html">
+                                                <a class="project-grid-item-img-link" href="interiery_05.html">
                                                     <div class="project-grid-item-img">
                                                         <img   src="images/interiors/thumbnails/5. art.jpg" data-lazy-src="images/interiors/thumbnails/5. art.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="dance-and-music-theatre image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="dance-and-music-theatre.html">Dance
+                                                    <h4 class="project-grid-item-title"><a href="interiery_05.html">Dance
                                                             and Music Theatre</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Perth, Australia </div>
@@ -220,14 +220,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="french-embassy.html">
+                                                <a class="project-grid-item-img-link" href="interiery_06.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/interiors/thumbnails/6. gold bathroom.JPG" data-lazy-src="images/interiors/thumbnails/6. gold bathroom.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="french-embassy.html" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="french-embassy.html">French
+                                                    <h4 class="project-grid-item-title"><a href="interiery_06.html">French
                                                             Embassy</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Casablanca, Morocco </div>
@@ -240,14 +240,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="amman-hotel.html">
+                                                <a class="project-grid-item-img-link" href="interiery_07.html">
                                                     <div class="project-grid-item-img">
                                                         <img   src="images/interiors/thumbnails/7. moon.jpg" data-lazy-src="images/interiors/thumbnails/7. moon.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="amman-hotel image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="amman-hotel.html">Hower
+                                                    <h4 class="project-grid-item-title"><a href="interiery_07.html">Hower
                                                             Cafe</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Guangzhou, China </div>
@@ -260,14 +260,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="evo-grand-hall.html">
+                                                <a class="project-grid-item-img-link" href="interiery_08.html">
                                                     <div class="project-grid-item-img">
                                                         <img   src="images/interiors/thumbnails/8. bath.JPG" data-lazy-src="images/interiors/thumbnails/8. bath.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="evo-grand-hall image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="evo-grand-hall.html">Evo
+                                                    <h4 class="project-grid-item-title"><a href="interiery_08.html">Evo
                                                             Grand Hall</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Prague, Czech Republic </div>
