--- a/interiery_02.html
+++ b/interiery_02.html
@@ -83,29 +83,78 @@
                         data-width="0" data-slides="1">
 
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/interiors/01.png"
-                                class="s-img-switch" alt="slier image" />
-                        </div>
-                        <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero2.png"
+                            <img width="2000" height="1200" src="images/interiors/02/hlavni.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero3.png"
+                            <img width="2000" height="1200" src="images/interiors/02/01.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/02/02.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="1800" height="1417" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/02/03.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="1800" height="1417" src="images/interiors/02/04.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/05.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/06.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/07.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/08.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/09.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/010.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/011.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch1.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch2.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch3.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch4.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch5.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch6.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+
 
                     </div>
 
@@ -120,27 +169,75 @@
                         data-speed="6000" data-autoplay-speed="1000" data-for=".project-detail-full-main" data-width="0"
                         data-focus="1" data-slides="5">
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero1.jpg"
+                            <img width="2000" height="1200" src="images/interiors/02/hlavni.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero2.png"
+                            <img width="2000" height="1200" src="images/interiors/02/01.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero3.png"
+                            <img width="2000" height="1200" src="images/interiors/02/02.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/02/03.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="1800" height="1417" src="https://placehold.co/2000x1200"
+                            <img width="1800" height="1417" src="images/interiors/02/04.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/02/05.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/06.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/07.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/08.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/09.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/010.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/011.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch1.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch2.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch3.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch4.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch5.jpeg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/02/ch6.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                     </div>
