projekty hero change

--- a/projekty.html
+++ b/projekty.html
@@ -89,7 +89,7 @@
                 <div class="prague-categories-outer">
                     <div class="container-fluid no-padd top-banner categories light">
                         <span class="overlay"></span>
-                        <img src="images/detske pokojicky 1920x800.jpg" class="cover-background position-absolute top-0 start-0 w-100 h-100" style="object-fit: cover;" alt="main banner image" id="interiery"/>
+                        <img src="images/projekty 1920x800.jpg" class="cover-background position-absolute top-0 start-0 w-100 h-100" style="object-fit: cover;" alt="main banner image" id="interiery"/>
                         <div class="row align-items-center h-100 justify-content-center">
                           
                             <div class="content">
