--- a/interiery_04.html
+++ b/interiery_04.html
@@ -83,29 +83,34 @@
                         data-width="0" data-slides="1">
 
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/interiors/01.png"
-                                class="s-img-switch" alt="slier image" />
-                        </div>
-                        <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero2.png"
+                            <img width="2000" height="1200" src="images/interiors/04/01.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero3.png"
+                            <img width="2000" height="1200" src="images/interiors/04/02.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/04/03.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="1800" height="1417" src="https://placehold.co/2000x1200"
+                            <img width="1800" height="1417" src="images/interiors/04/04.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/04/05.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/04/06.jpg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/04/07.jpg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+
 
                     </div>
 
@@ -120,27 +125,31 @@
                         data-speed="6000" data-autoplay-speed="1000" data-for=".project-detail-full-main" data-width="0"
                         data-focus="1" data-slides="5">
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero1.jpg"
+                            <img width="2000" height="1200" src="images/interiors/04/01.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero2.png"
+                            <img width="2000" height="1200" src="images/interiors/04/02.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero3.png"
+                            <img width="2000" height="1200" src="images/interiors/04/03.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="1800" height="1417" src="images/interiors/04/04.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="1800" height="1417" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/04/05.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/04/06.jpg"
+                                class="s-img-switch" alt="slider image" />
+                        </div>
+                        <div class="project-detail-main-slide slick-slide">
+                            <img width="2000" height="1200" src="images/interiors/04/07.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                     </div>
