--- a/interiery_08.html
+++ b/interiery_08.html
@@ -83,31 +83,23 @@
                         data-width="0" data-slides="1">
 
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/interiors/01.png"
-                                class="s-img-switch" alt="slier image" />
-                        </div>
-                        <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero2.png"
+                            <img width="2000" height="1200" src="images/interiors/08/01.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero3.png"
+                            <img width="2000" height="1200" src="images/interiors/08/02.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="2000" height="1200" src="images/interiors/08/03.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="1800" height="1417" src="https://placehold.co/2000x1200"
-                                class="s-img-switch" alt="slider image" />
-                        </div>
-                        <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="1800" height="1417" src="images/interiors/08/04.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
 
-                    </div>
+                     </div>
 
                     <div class="project-detail-full-overlay">
 
@@ -120,30 +112,23 @@
                         data-speed="6000" data-autoplay-speed="1000" data-for=".project-detail-full-main" data-width="0"
                         data-focus="1" data-slides="5">
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero1.jpg"
+                            <img width="2000" height="1200" src="images/interiors/08/01.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero2.png"
+                            <img width="2000" height="1200" src="images/interiors/08/02.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/hero3.png"
+                            <img width="2000" height="1200" src="images/interiors/08/03.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
+                            <img width="1800" height="1417" src="images/interiors/08/04.jpg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
-                        <div class="project-detail-main-slide slick-slide">
-                            <img width="1800" height="1417" src="https://placehold.co/2000x1200"
-                                class="s-img-switch" alt="slider image" />
-                        </div>
-                        <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="https://placehold.co/2000x1200"
-                                class="s-img-switch" alt="slider image" />
-                        </div>
-                    </div>
+
+                      </div>
                     <div class="project-detail-fullscreen-content">
 
                         <h6 class="project-detail-fullscreen-content-subtitle"> Interiéry</h6>
