--- a/projekty.html
+++ b/projekty.html
@@ -473,14 +473,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="european-lard-station.html">
+                                                <a class="project-grid-item-img-link" href="komerce_01.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/komerce/thumbnails/1. phi.jpg" data-lazy-src="images/komerce/thumbnails/1. phi.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="european-lard-station" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="european-lard-station.html">European
+                                                    <h4 class="project-grid-item-title"><a href="komerce_01.html">European
                                                             Lard Station</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Strasbourg, France </div>
@@ -493,14 +493,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="yabroudi-villa.html">
+                                                <a class="project-grid-item-img-link" href="komerce_02.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/komerce/thumbnails/2. adel salon.JPG" data-lazy-src="images/komerce/thumbnails/2. adel salon.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="yabroudi-villa image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="yabroudi-villa.html">Yabroudi
+                                                    <h4 class="project-grid-item-title"><a href="komerce_02.html">Yabroudi
                                                             Villa</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Dubai, United Arab Emirates </div>
@@ -513,14 +513,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="cultural-complex-centre.html">
+                                                <a class="project-grid-item-img-link" href="komerce_03.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/komerce/thumbnails/3. gold barbers.jpg" data-lazy-src="images/komerce/thumbnails/3. gold barbers.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="cultural-complex-centre image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="cultural-complex-centre.html">Cultural
+                                                    <h4 class="project-grid-item-title"><a href="komerce_03.html">Cultural
                                                             Complex Centre</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Muscat, Sultanate of Oman </div>
@@ -533,14 +533,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="dalbourne-villa.html">
+                                                <a class="project-grid-item-img-link" href="komerce_04.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/komerce/thumbnails/4. hexagon.JPG" data-lazy-src="images/komerce/thumbnails/4. hexagon.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="dalbourne-villa image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="dalbourne-villa.html">Dalbourne
+                                                    <h4 class="project-grid-item-title"><a href="komerce_04.html">Dalbourne
                                                             Villa</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Guangzhou, China </div>
