--- a/projekty.html
+++ b/projekty.html
@@ -316,14 +316,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="yabroudi-villa.html">
+                                                <a class="project-grid-item-img-link" href="detske_1.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/detske_pokojicky/thumbnails/1. rose.jpg" data-lazy-src="images/detske_pokojicky/thumbnails/1. rose.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="yabroudi-villa image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="yabroudi-villa.html">Yabroudi
+                                                    <h4 class="project-grid-item-title"><a href="detske_1.html">Yabroudi
                                                             Villa</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Dubai, United Arab Emirates </div>
@@ -336,14 +336,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="amman-rotana-hotel.html">
+                                                <a class="project-grid-item-img-link" href="detske_02.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/detske_pokojicky/thumbnails/2. dino.JPG" data-lazy-src="images/detske_pokojicky/thumbnails/2. dino.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="amman-hotel image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="amman-rotana-hotel.html">Amman
+                                                    <h4 class="project-grid-item-title"><a href="detske_02.html">Amman
                                                             Rotana Hotel</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Amman, Jordan </div>
@@ -356,14 +356,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="lorean-hotel.html">
+                                                <a class="project-grid-item-img-link" href="detske_03.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/detske_pokojicky/thumbnails/3. blue.jpg" data-lazy-src="images/detske_pokojicky/thumbnails/3. blue.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="lorean-hotel image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="lorean-hotel.html">Handebr
+                                                    <h4 class="project-grid-item-title"><a href="detske_03.html">Handebr
                                                             the Villa</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Rotterdam, Netherlands </div>
@@ -376,14 +376,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="velinston-apartments.html">
+                                                <a class="project-grid-item-img-link" href="detske_04.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/detske_pokojicky/thumbnails/4. mountain.JPG" data-lazy-src="images/detske_pokojicky/thumbnails/4. mountain.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="velinston-apartments image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="velinston-apartments.html">Velinston
+                                                    <h4 class="project-grid-item-title"><a href="detske_04.html">Velinston
                                                             Apartments</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Foshan, China </div>
@@ -396,14 +396,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="luxurious-apartment.html">
+                                                <a class="project-grid-item-img-link" href="detske_05.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/detske_pokojicky/thumbnails/5. labuœ.jpg" data-lazy-src="images/detske_pokojicky/thumbnails/5. labuœ.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="luxurious-apartment image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="luxurious-apartment.html">Luxurious
+                                                    <h4 class="project-grid-item-title"><a href="detske_05.html">Luxurious
                                                             apartment</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Kuwait City, Kuwait </div>
@@ -418,14 +418,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="alto-furniture.html">
+                                                <a class="project-grid-item-img-link" href="detske_06.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/detske_pokojicky/thumbnails/6. zajda.JPG" data-lazy-src="images/detske_pokojicky/thumbnails/6. zajda.JPG"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="alto-furniture image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="alto-furniture.html">Alto
+                                                    <h4 class="project-grid-item-title"><a href="detske_06.html">Alto
                                                             Furniture</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Minsk, Belarus </div>
