--- a/projekty.html
+++ b/projekty.html
@@ -106,7 +106,7 @@
                     <div class="container padd-only-xs">
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="row prague_grid prague_categoties prague_count_col4 prague_gap_col15"
+                                <div class="row prague_grid prague_categories prague_count_col4 prague_gap_col15"
                                     data-columns="prague_count_col4" data-gap="prague_gap_col15">
                                     <div class="prague_categories_btn">
                                         <div class="categories_btn categories_btn_up">
@@ -301,7 +301,7 @@
                     <div class="container padd-only-xs">
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="row prague_grid prague_categoties prague_count_col4 prague_gap_col15"
+                                <div class="row prague_grid prague_categories prague_count_col4 prague_gap_col15"
                                     data-columns="prague_count_col4" data-gap="prague_gap_col15">
                                     <div class="prague_categories_btn">
                                         <div class="categories_btn categories_btn_up">
@@ -316,14 +316,14 @@
                                     <div class="portfolio-item-wrapp">
                                         <div class="portfolio-item">
                                             <div class="project-grid-wrapper">
-                                                <a class="project-grid-item-img-link" href="detske_1.html">
+                                                <a class="project-grid-item-img-link" href="detske_01.html">
                                                     <div class="project-grid-item-img">
                                                         <img  src="images/detske_pokojicky/thumbnails/1. rose.jpg" data-lazy-src="images/detske_pokojicky/thumbnails/1. rose.jpg"
                                                             class="s-img-switch wp-post-image wp-post-image" alt="yabroudi-villa image" />
                                                     </div>
                                                 </a>
                                                 <div class="project-grid-item-content">
-                                                    <h4 class="project-grid-item-title"><a href="detske_1.html">Yabroudi
+                                                    <h4 class="project-grid-item-title"><a href="detske_01.html">Yabroudi
                                                             Villa</a></h4>
                                                     <div class="project-grid-item-category">
                                                         Dubai, United Arab Emirates </div>
@@ -458,7 +458,7 @@
                     <div class="container padd-only-xs">
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="row prague_grid prague_categoties prague_count_col4 prague_gap_col15"
+                                <div class="row prague_grid prague_categories prague_count_col4 prague_gap_col15"
                                     data-columns="prague_count_col4" data-gap="prague_gap_col15">
                                     <div class="prague_categories_btn">
                                         <div class="categories_btn categories_btn_up">
