--- a/kontakt.html
+++ b/kontakt.html
@@ -65,13 +65,12 @@
         <!-- end header -->
         <!-- end header -->
         <!-- start page title -->
-        <section class="page-title-big-typography bg-dark-gray ipad-top-space-margin xs-py-0" data-parallax-background-ratio="0.5" style="background-image: url(https://placehold.co/1925x1050)">
+        <section class="page-title-big-typography bg-dark-gray ipad-top-space-margin xs-py-0" data-parallax-background-ratio="0.5" style="background-image: url(images/bezloga.jpg)">
             <div class="opacity-light bg-dark-gray"></div>
             <div class="container">
                 <div class="row align-items-center justify-content-center small-screen">
                     <div class="col-lg-6 col-md-8 position-relative text-center page-title-extra-small" data-anime='{ "el": "childs", "rotateX": [90, 0], "opacity": [0,1], "staggervalue": 150, "easing": "easeOutQuad" }'>
-                        <h1 class="mb-5px alt-font text-white fw-400"><span class="opacity-6">Love to hear from you</span></h1>
-                        <h2 class="mb-0 text-white alt-font ls-minus-2px text-shadow-double-large fw-500">Contact us</h2>
+                                   <h1 class="title text-gradient-gold fw-100">KONTAKTUJTE MĚ</h1>
                     </div>
                     <div class="down-section text-center" data-anime='{ "translateY": [100, 0], "opacity": [0,1], "easing": "easeOutQuad" }'>
                         <a href="#down-section" class="section-link">
